docs/api/qiskit/0.43/qiskit.transpiler.passes.CheckMap.mdx
---
title: CheckMap
description: API reference for qiskit.transpiler.passes.CheckMap
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.transpiler.passes.CheckMap
---

# CheckMap

<Class id="qiskit.transpiler.passes.CheckMap" isDedicatedPage={true} github="https://github.com/qiskit/qiskit/tree/stable/0.24/qiskit/transpiler/passes/utils/check_map.py" signature="CheckMap(*args, **kwargs)">
  Bases: [`AnalysisPass`](qiskit.transpiler.AnalysisPass "qiskit.transpiler.basepasses.AnalysisPass")

  Check if a DAG circuit is already mapped to a coupling map.

  Check if a DAGCircuit is mapped to coupling\_map by checking that all 2-qubit interactions are laid out to be on adjacent qubits in the global coupling map of the device, setting the property set field (either specified with `property_set_field` or the default `is_swap_mapped`) to `True` or `False` accordingly. Note this does not validate directionality of the connectivity between qubits. If you need to check gates are implemented in a native direction for a target use the [`CheckGateDirection`](qiskit.transpiler.passes.CheckGateDirection "qiskit.transpiler.passes.CheckGateDirection") pass instead.

  CheckMap initializer.

  **Parameters**

  *   **coupling\_map** (*Union\[*[*CouplingMap*](qiskit.transpiler.CouplingMap "qiskit.transpiler.CouplingMap")*,* [*Target*](qiskit.transpiler.Target "qiskit.transpiler.Target")*]*) – Directed graph representing a coupling map.
  *   **property\_set\_field** (*str*) – An optional string to specify the property set field to store the result of the check. If not default the result is stored in `"is_swap_mapped"`.

  ## Methods

  <span id="qiskit-transpiler-passes-checkmap-name" />

  ### name

  <Function id="qiskit.transpiler.passes.CheckMap.name" name="name" signature="CheckMap.name()">
    Return the name of the pass.
  </Function>

  <span id="qiskit-transpiler-passes-checkmap-run" />

  ### run

  <Function id="qiskit.transpiler.passes.CheckMap.run" name="run" signature="CheckMap.run(dag)">
    Run the CheckMap pass on dag.

    If dag is mapped to coupling\_map, the property is\_swap\_mapped is set to True (or to False otherwise).

    **Parameters**

    **dag** ([*DAGCircuit*](qiskit.dagcircuit.DAGCircuit "qiskit.dagcircuit.DAGCircuit")) – DAG to map.
  </Function>

  ## Attributes

  ### is\_analysis\_pass

  <Attribute id="qiskit.transpiler.passes.CheckMap.is_analysis_pass" name="is_analysis_pass">
    Check if the pass is an analysis pass.

    If the pass is an AnalysisPass, that means that the pass can analyze the DAG and write the results of that analysis in the property set. Modifications on the DAG are not allowed by this kind of pass.
  </Attribute>

  ### is\_transformation\_pass

  <Attribute id="qiskit.transpiler.passes.CheckMap.is_transformation_pass" name="is_transformation_pass">
    Check if the pass is a transformation pass.

    If the pass is a TransformationPass, that means that the pass can manipulate the DAG, but cannot modify the property set (but it can be read).
  </Attribute>
</Class>

